# android9_vendor

./: .gitattributes
google/apps/AndroidPlatformServices/: Android.mk  AndroidPlatformServices.apk  AndroidPlatformServices_arm.apk  AndroidPlatformServices_arm64.apk  AndroidPlatformServices_x86.apk  AndroidPlatformServices_x86_64.apk
google/apps/CalculatorGoogle/: Android.mk  CalculatorGoogle.apk
google/apps/CalendarGoogle/: Android.mk  CalendarGoogle.apk
google/apps/CarrierServices/: Android.mk  CarrierServices_arm.apk  CarrierServices_arm64.apk  CarrierServices_x86.apk  CarrierServices_x86_64.apk
google/apps/Chrome/: Android.mk  Chrome_arm.apk  Chrome_arm64.apk  Chrome_x86.apk  Chrome_x86_64.apk
google/apps/ConfigUpdater/: Android.mk  ConfigUpdater.apk
google/apps/DeskClockGoogle/: Android.mk  DeskClockGoogle.apk
google/apps/Drive/: Android.mk  Drive_arm.apk  Drive_arm64.apk  Drive_arm64_hdpi.apk  (+21 more)
google/products/: eea_common.mk  eea_go_common.mk  fi.mk  gms.mk  gms_eea_type1.mk  gms_eea_type2.mk  gms_eea_type3a.mk  gms_eea_type3b.mk  gms_eea_type4a.mk  gms_eea_type4b.mk  gms_eea_type4c.mk  gms_eea_v2_type4c.mk  gms_go.mk  gms_go_eea_type1.mk  gms_go_eea_type2.mk  gms_go_eea_type3a.mk  gms_go_eea_type3b.mk  gms_go_eea_type4a.mk  gms_go_eea_type4b.mk  gms_go_eea_type4c.mk  gms_go_eea_v2_type4c.mk  turbo.mk
nxp/pn8xt/: device-nfc.mk  manifest.xml
qcom/proprietary/mm-audio/capiv2_api/: Makefile.am  capi_v2_extn.h  configure.ac
widevine/libwvdrmengine/: Android.mk  build_and_run_all_unit_tests.sh  run_all_unit_tests.sh
widevine/tests/: Android.mk
(+3072 files in other folders)
